force-app/main/default/objects/ContentBlockItem__c/ContentBlockItem__c.object-meta.xml
<CustomObject>
    <label>ContentBlockItem</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ContentBlockItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>