force-app/main/default/objects/ContentBlockItem__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Content</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>