force-app/main/default/objects/ContentBlockItem__c/fields/PageToItemId__c.field-meta.xml
<CustomField>
    <fullName>PageToItemId__c</fullName>
    <description>Internal field used at runtime. Should be empty in the DB</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PageToItemId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>