force-app/main/default/objects/ContentBlockItem__c/fields/Times_Used__c.field-meta.xml
<CustomField>
    <fullName>Times_Used__c</fullName>
    <label>Times Used</label>
    <summaryForeignKey>PageToItem__c.ContentBlockItem__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>