force-app/main/default/objects/ContentBlockItem__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This field will determine if the item is regular HTML or a Web Form include.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>