force-app/main/default/objects/ContentBlockItem__c/fields/Web_Form__c.field-meta.xml
<CustomField>
    <fullName>Web_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Web Form</label>
    <referenceTo>Web_Form__c</referenceTo>
    <relationshipLabel>ContentBlockItems</relationshipLabel>
    <relationshipName>ContentBlockItems</relationshipName>
    <type>Lookup</type>
</CustomField>